# chess_engine

lookuptables/: bishop_magic_lookup.json  bishop_pre_masks.json  black_pawn_masks.json  direction_lookup.json  king_masks.json  knight_masks.json  rook_magic_lookup.json  rook_pre_masks.json  white_pawn_masks.json
pythonchess/: analysisGUI.py  boardUI.py  board_coordinator.py  board_frame.py  computer_vs_computerGUI.py  main.py  play_vs_computerGUI.py  startscreenGUI.py  test.py
rustchess/: .gitignore  Cargo.toml  pyproject.toml
rustchess/src/: bitboard_helper.rs  chess_computer.rs  chessboard.rs  chessboard_coordinator.rs  chessboard_helper.rs  lib.rs  lookuptables.rs  test.rs
