[package]
name = "rustchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "RustEngine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
serde_derive = "1.0"
serde-big-array = "0.5.1"
rand = "0.8.5"
